fix scrollbar

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -21,6 +21,7 @@ main {
     display: flex;
     flex-direction: column;
     overflow-y: scroll;
+    width: 100%;
 }
 
 @import 'sidebar';
